added izitoast to pj, started layout

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body>
 
+  <form class="search"><input type="text"><button></button></form>
 
   <script type="module" src="./main.js"></script>
 </body>
