--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
 
 <body>
 
-  <form class="search"><input type="text"><button></button></form>
+  <form class="search">
+    <input class="search-input" type="text" placeholder="Search images...">
+    <button class="submit" type="submit">Search</button>
+  </form>
 
   <script type="module" src="./main.js"></script>
 </body>
