--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,32 @@
     <input class="search-input" type="text" placeholder="Search images...">
     <button class="submit" type="submit">Search</button>
   </form>
+<section>
+  <ul class="find--images-block">
+    <!-- <li class="find--images-item">
+      <img src="" alt="" />
+      <ul class="stats-blick">
+        <li>
+          <span>Likes</span>
+          <span></span>
+        </li>
+        <li>
+          <span>Views</span>
+          <span></span>
+        </li>
+        <li>
+          <span>Comments</span>
+          <span></span>
+        </li>
+        <li>
+          <span>Downloads</span>
+          <span></span>
+        </li>
+      </ul>
+    </li> -->
+  </ul>
+</section>
+  
 
   <script type="module" src="./main.js"></script>
 </body>
