--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <button class="submit" type="submit">Search</button>
   </form>
   <section>
-    <ul class="find--images-block">
+    <ul class="gallery">
 
     </ul>
   </section>
