--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <input class="search-input" type="text" placeholder="Search images...">
     <button class="submit" type="submit">Search</button>
   </form>
-  <section>
+  <section class="gallery-section">
     <ul class="gallery">
 
     </ul>
