--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
   <form class="search">
     <input class="search-input" type="text" placeholder="Search images...">
-    <button class="submit" type="submit">Search</button>
+    <button class="submit" type="submit" disabled="true">Search</button>
   </form>
   <section class="gallery-section">
     <ul class="gallery">
